--- a/package.json
+++ b/package.json
@@ -14,16 +14,22 @@
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@react-email/components": "^0.5.1",
     "@tabler/icons-react": "^3.33.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.15.0",
+    "iyzipay": "^2.0.64",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.511.0",
+    "mjml": "^4.15.3",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.3",
     "react": "^19.0.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.0.0",
+    "react-email": "^4.2.8",
     "react-icons": "^5.5.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0"
