--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fal-ai/client": "^1.6.2",
     "@google/generative-ai": "^0.24.1",
     "@lottiefiles/dotlottie-react": "^0.13.5",
     "@radix-ui/react-accordion": "^1.2.11",
